# waveform_line_task

./: .gitignore  README.md  __init__.py  convert_gauss_section_to_waveform_line.sh  convert_real_npy_to_dataset.py  device_utils.py  generate_dataset.py  install_deps.sh  predict_model.py  predict_test.sh  predict_true.sh  pyproject.toml  render.py  run_generate.sh  run_install_deps.sh  run_predict.sh  run_train.sh  synth.py  train.sh  train_model.py
datasets/: README.md
datasets/sample_check/: README.md  manifest.csv  meta.json
docs/: README.md  method.md  model_method.md
model/: __init__.py  dataset.py  losses.py  metrics.py  network.py  postprocess.py
real_data/: README.md  convert_gauss_section_to_waveform_line.sh  convert_real_npy_to_dataset.py
